--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,391 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  background-color: #076324;
+  background-image: url('http://www.transparenttextures.com/patterns/black-felt.png');
+  font-family: Arial;
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.App {
+  max-width: 768px;
+  margin: auto;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1 {
+  margin: 0 0 10px;
+  padding: 2px;
+  background-color: #00600f;
+  color: white;
+  box-shadow: 2px 6px 9px 1px rgba(0, 0, 0, 0.5);
+}
+@media screen and (min-width: 769px) {
+  h1 {
+    border-radius: 0 2px;
+  }
+}
+.players {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 90%;
+  margin: 10px auto;
+  padding: 2px;
+}
+.player {
+  min-width: calc(100% / 4 - 8 * 2px);
+  height: 24px;
+  margin-bottom: 12px;
+  background-color: #6abf69;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 2px 6px 9px 1px rgba(0, 0, 0, 0.5);
+}
+.player:hover {
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.board {
+  display: block;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  margin: 10px auto;
+}
+@media screen and (min-width: 425px) {
+  .board {
+    display: flex;
+  }
+}
+.card {
+  display: inline-block;
+}
+button.croupier-order {
+  display: block;
+  width: 90%;
+  height: 40px;
+  margin: 10px auto;
+  padding: 2px;
+  background-color: #6abf69;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 2px 6px 9px 1px rgba(0, 0, 0, 0.5);
+}
+button.croupier-order:hover {
+  color: white;
+}
+h2 {
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ace_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -2px -1px;
+}
+
+.two_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -75px -1px;
+}
+
+.three_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -148px -1px;
+}
+
+.four_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -220px -1px;
+}
+
+.five_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -294px -1px;
+}
+
+.six_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -366px -1px;
+}
+
+.seven_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -440px -1px;
+}
+
+.eight_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -512px -1px;
+}
+
+.nine_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -586px -1px;
+}
+
+.ten_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -658px -1px;
+}
+
+.jack_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -732px -1px;
+}
+
+.queen_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -804px -1px;
+}
+
+.king_clubs {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -878px -1px;
+}
+
+.ace_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -2px -99px;
+}
+
+.two_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -75px -99px;
+}
+
+.three_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -148px -99px;
+}
+
+.four_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -220px -99px;
+}
+
+.five_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -294px -99px;
+}
+
+.six_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -366px -99px;
+}
+
+.seven_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -440px -99px;
+}
+
+.eight_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -512px -99px;
+}
+
+.nine_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -586px -99px;
+}
+
+.ten_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -658px -99px;
+}
+
+.jack_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -732px -99px;
+}
+
+.queen_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -804px -99px;
+}
+
+.king_hearts {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -878px -99px;
+}
+
+.ace_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -2px -197px;
+}
+
+.two_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -75px -197px;
+}
+
+.three_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -148px -197px;
+}
+
+.four_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -220px -197px;
+}
+
+.five_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -294px -197px;
+}
+
+.six_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -366px -197px;
+}
+
+.seven_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -440px -197px;
+}
+
+.eight_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -512px -197px;
+}
+
+.nine_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -586px -197px;
+}
+
+.ten_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -658px -197px;
+}
+
+.jack_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -732px -197px;
+}
+
+.queen_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -804px -197px;
+}
+
+.king_spades {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -878px -197px;
+}
+
+.ace_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -2px -295px;
+}
+
+.two_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -75px -295px;
+}
+
+.three_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -148px -295px;
+}
+
+.four_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -220px -295px;
+}
+
+.five_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -294px -295px;
+}
+
+.six_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -366px -295px;
+}
+
+.seven_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -440px -295px;
+}
+
+.eight_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -512px -295px;
+}
+
+.nine_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -586px -295px;
+}
+
+.ten_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -658px -295px;
+}
+
+.jack_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -732px -295px;
+}
+
+.queen_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -804px -295px;
+}
+
+.king_diamonds {
+  width: 71px;
+  height: 97px;
+  background: url(http://dobsondev.com/wp-content/uploads/2015/04/windows-playing-cards.png) -878px -295px;
 }
