--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
 h1 {
   margin: 0 0 10px;
   padding: 2px;
+  font-size: 1.2rem;
   background-color: #00600f;
   color: white;
   box-shadow: 2px 6px 9px 1px rgba(0, 0, 0, 0.5);
@@ -21,6 +22,7 @@ h1 {
 @media screen and (min-width: 769px) {
   h1 {
     border-radius: 0 2px;
+    font-size: 4rem;
   }
 }
 .players {
