--- a/src/App.css
+++ b/src/App.css
@@ -53,8 +53,9 @@ h1 {
 .board {
   display: block;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 90%;
+  min-height: 118px;
   margin: 10px auto;
 }
 @media screen and (min-width: 425px) {
@@ -64,7 +65,39 @@ h1 {
 }
 .card {
   display: inline-block;
+  margin: 7px calc((100% - 5 * 71px) / 8) 14px;
 }
+.card:first-child {
+  margin-left: 0;
+}
+.card:last-child {
+  margin-right: 0;
+}
+
+#add-player-modal {
+  background-color: #076324;
+  background-image: url('http://www.transparenttextures.com/patterns/black-felt.png');
+}
+#add-player-modal [type='text'] {
+  color: white;
+  text-align: center;
+}
+.playerCards {
+  display: flex;
+  justify-content: space-evenly;
+}
+#add-player-modal [type='submit'] {
+  display: block;
+  width: 44%;
+  height: 40px;
+  margin: 10px auto;
+  padding: 2px;
+  background-color: #6abf69;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 2px 6px 9px 1px rgba(0, 0, 0, 0.5);
+}
+
 button.croupier-order {
   display: block;
   width: 90%;
