--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@ h1 {
 }
 
 #add-player-modal {
+  min-height: 230px;
   background-color: #076324;
   background-image: url('http://www.transparenttextures.com/patterns/black-felt.png');
   border-radius: 6px;
